--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -38,8 +38,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: registry.netbytes.space
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.REPO_NAME }}
+          password: ${{ secrets.REPO_TOKEN }}
       
       - name: Build and push
         uses: docker/build-push-action@v3
