--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -43,5 +43,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: library/nbs-blog:latest
+          tags: registry.netbytes.space/library/nbs-blog:latest
 
